fixing images and spacing for button

--- a/style.css
+++ b/style.css
@@ -92,8 +92,7 @@ body {
 
 .background__title--sub{
     font-size: 24px;
-    letter-spacing: 2px;
-    margin-top: 40px;
+    margin-top: 50px;
     margin-bottom: 15px;
 }
 
@@ -103,7 +102,7 @@ body {
 
 .background__paragraph {
     font-size: 1.05rem;
-    margin-bottom: 1.25rem;
+    margin-bottom: 2.25rem;
 }
 
 .background__content {
@@ -123,10 +122,12 @@ body {
 
 .background__image--right {
     margin: 10px 15px 6px 15px;
+    float: right;
 }
 
 .background__image--left {
     margin: 10px 20px 5px 0;
+    float: left;
 }
 
 .background__image--center {
@@ -137,7 +138,7 @@ body {
 
 .background__button-cast {
     text-align: center;
-    margin-top: 30px;
+    margin: 100px 0px;
     display: flex;
     justify-content: center;
 }
@@ -145,11 +146,13 @@ body {
 .background__button {
     background-color: #D72638;
     color: white;
-    padding: 10px 20px;
+    padding: 12px 20px;
     text-decoration: none;
     border-radius: 5px;
-    font-weight: normal;
+    font-weight: 600;
     transition: background-color 0.3s ease;
+    letter-spacing: 2px;
+    font-size: 25px;
 }
 
 .background__button:hover {
